tmp/wrong_1640057667.3354938.txt
identifier 'sprintf_len'	 [StartOfLine]	Loc=<./tmp/code_1.c:1:1>
l_paren '('		Loc=<./tmp/code_1.c:1:12>
char 'char'		Loc=<./tmp/code_1.c:1:13>
star '*'	 [LeadingSpace]	Loc=<./tmp/code_1.c:1:18>
identifier 'string'		Loc=<./tmp/code_1.c:1:19>
comma ','		Loc=<./tmp/code_1.c:1:25>
const 'const'	 [LeadingSpace]	Loc=<./tmp/code_1.c:1:27>
char 'char'	 [LeadingSpace]	Loc=<./tmp/code_1.c:1:33>
star '*'	 [LeadingSpace]	Loc=<./tmp/code_1.c:1:38>
identifier 'format'		Loc=<./tmp/code_1.c:1:39>
comma ','		Loc=<./tmp/code_1.c:1:45>
ellipsis '...'	 [LeadingSpace]	Loc=<./tmp/code_1.c:1:47>
r_paren ')'		Loc=<./tmp/code_1.c:1:50>
./tmp/code_1.c:3:2: error: #else without #if
#else
 ^
identifier 'sprintf_len'	 [StartOfLine]	Loc=<./tmp/code_1.c:5:1>
l_paren '('		Loc=<./tmp/code_1.c:5:12>
identifier 'va_alist'		Loc=<./tmp/code_1.c:5:13>
r_paren ')'		Loc=<./tmp/code_1.c:5:21>
identifier 'va_dcl'	 [LeadingSpace]	Loc=<./tmp/code_1.c:5:23>
./tmp/code_1.c:7:2: error: #endif without #if
#endif
 ^
l_brace '{'	 [StartOfLine]	Loc=<./tmp/code_1.c:9:1>
identifier 'va_list'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_1.c:11:2>
identifier 'args'	 [LeadingSpace]	Loc=<./tmp/code_1.c:11:10>
semi ';'		Loc=<./tmp/code_1.c:11:14>
identifier 'va_start'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_1.c:15:2>
l_paren '('		Loc=<./tmp/code_1.c:15:10>
identifier 'args'		Loc=<./tmp/code_1.c:15:11>
comma ','		Loc=<./tmp/code_1.c:15:15>
identifier 'format'	 [LeadingSpace]	Loc=<./tmp/code_1.c:15:17>
r_paren ')'		Loc=<./tmp/code_1.c:15:23>
semi ';'		Loc=<./tmp/code_1.c:15:24>
identifier 'vsprintf'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_1.c:31:2>
l_paren '('		Loc=<./tmp/code_1.c:31:10>
identifier 'string'		Loc=<./tmp/code_1.c:31:11>
comma ','		Loc=<./tmp/code_1.c:31:17>
identifier 'format'	 [LeadingSpace]	Loc=<./tmp/code_1.c:31:19>
comma ','		Loc=<./tmp/code_1.c:31:25>
identifier 'args'	 [LeadingSpace]	Loc=<./tmp/code_1.c:31:27>
r_paren ')'		Loc=<./tmp/code_1.c:31:31>
semi ';'		Loc=<./tmp/code_1.c:31:32>
return 'return'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_1.c:33:2>
identifier 'strlen'	 [LeadingSpace]	Loc=<./tmp/code_1.c:33:9>
l_paren '('		Loc=<./tmp/code_1.c:33:15>
identifier 'string'		Loc=<./tmp/code_1.c:33:16>
r_paren ')'		Loc=<./tmp/code_1.c:33:22>
semi ';'		Loc=<./tmp/code_1.c:33:23>
r_brace '}'	 [StartOfLine]	Loc=<./tmp/code_1.c:35:1>
eof ''		Loc=<./tmp/code_1.c:35:2>
2 errors generated.
